--- a/QT_files/untitled_menu.ui
+++ b/QT_files/untitled_menu.ui
@@ -1,10 +1,4 @@
-import io
-import sys
-
-from PyQt6 import uic  # Импортируем uic
-from PyQt6.QtWidgets import QApplication, QMainWindow, QWidget
-
-template_menu = """<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Form</class>
  <widget class="QWidget" name="Form">
@@ -81,22 +75,3 @@ font: 24pt &quot;MS Shell Dlg 2&quot;;
  <resources/>
  <connections/>
 </ui>
-"""
-
-
-class Menu(QWidget):
-    def __init__(self):
-        super().__init__()
-        f = io.StringIO(template_menu)
-        uic.loadUi(f, self)  # Загружаем дизайн
-
-    def login_button(self):
-        return self.lvl
-
-
-if __name__ == '__main__':
-    app = QApplication(sys.argv)
-    ex = Menu()
-    ex.show()
-    sys.exit(app.exec())
-
