Дороботала переход между виджетами, добавила окно настроек

--- a/QT_files/untitled_lvl.ui
+++ b/QT_files/untitled_lvl.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1089</width>
-    <height>674</height>
+    <height>876</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>320</y>
+     <y>310</y>
      <width>271</width>
      <height>41</height>
     </rect>
@@ -164,9 +164,9 @@ background-color: rgb(139, 103, 103);</string>
   <widget class="QPushButton" name="exit">
    <property name="geometry">
     <rect>
-     <x>940</x>
+     <x>910</x>
      <y>20</y>
-     <width>131</width>
+     <width>171</width>
      <height>41</height>
     </rect>
    </property>
@@ -177,6 +177,42 @@ background-color: rgb(139, 103, 103);</string>
    </property>
    <property name="text">
     <string>Назад</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="lvl4">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>80</y>
+     <width>241</width>
+     <height>201</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(93, 0, 1);
+font: 16pt &quot;MS Shell Dlg 2&quot;;
+background-color: rgb(139, 103, 103);</string>
+   </property>
+   <property name="text">
+    <string>4 LVL</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="time_lvl4">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>370</y>
+     <width>241</width>
+     <height>201</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(93, 0, 1);
+font: 16pt &quot;MS Shell Dlg 2&quot;;
+background-color: rgb(139, 103, 103);</string>
+   </property>
+   <property name="text">
+    <string>Time attack LVL 4</string>
    </property>
   </widget>
  </widget>
