--- a/QT_files/untitled_field.ui
+++ b/QT_files/untitled_field.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1023</width>
+    <width>1089</width>
     <height>876</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="_field">
+  <widget class="QLabel" name="lvl_field">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -23,7 +23,8 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;
+color: rgb(106, 0, 0);</string>
    </property>
    <property name="text">
     <string>Уровень:</string>
@@ -39,7 +40,8 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;
+color: rgb(106, 0, 0);</string>
    </property>
    <property name="text">
     <string>Размер поля:</string>
@@ -55,7 +57,8 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
+    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;
+color: rgb(106, 0, 0);</string>
    </property>
    <property name="text">
     <string>Прогресс:</string>
@@ -77,11 +80,16 @@
   <widget class="QPushButton" name="exit">
    <property name="geometry">
     <rect>
-     <x>860</x>
-     <y>10</y>
+     <x>930</x>
+     <y>20</y>
      <width>141</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;
+color: rgb(125, 0, 0);
+background-color: rgb(170, 114, 114);</string>
    </property>
    <property name="text">
     <string>Выход</string>
@@ -90,30 +98,42 @@
   <widget class="QLCDNumber" name="time_field">
    <property name="geometry">
     <rect>
-     <x>261</x>
-     <y>191</y>
+     <x>291</x>
+     <y>181</y>
      <width>71</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(202, 0, 0);
+font: 16pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
   </widget>
   <widget class="QLCDNumber" name="bomb_field">
    <property name="geometry">
     <rect>
-     <x>750</x>
-     <y>190</y>
+     <x>780</x>
+     <y>180</y>
      <width>71</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(0, 0, 0);
+color: rgb(202, 0, 0);</string>
    </property>
   </widget>
   <widget class="QPushButton" name="new_game">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>510</x>
-     <y>180</y>
-     <width>61</width>
-     <height>41</height>
+     <x>550</x>
+     <y>170</y>
+     <width>51</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -123,7 +143,7 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>290</x>
      <y>230</y>
      <width>561</width>
      <height>621</height>
