--- a/QT_files/untitled_menu.ui
+++ b/QT_files/untitled_menu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1041</width>
-    <height>810</height>
+    <width>1089</width>
+    <height>876</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>190</x>
      <y>190</y>
      <width>671</width>
      <height>191</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(125, 0, 0);
+    <string notr="true">color: rgb(170, 0, 0);
 font: 36pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
@@ -36,7 +36,7 @@ font: 36pt &quot;MS Shell Dlg 2&quot;;</string>
   <widget class="QPushButton" name="setting">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>280</x>
      <y>450</y>
      <width>501</width>
      <height>81</height>
@@ -45,7 +45,7 @@ font: 36pt &quot;MS Shell Dlg 2&quot;;</string>
    <property name="styleSheet">
     <string notr="true">color: rgb(74, 18, 11);
 background-color: rgb(156, 138, 138);
-font: 18pt &quot;MS Shell Dlg 2&quot;;</string>
+font: 18pt &quot;MS UI Gothic&quot;;</string>
    </property>
    <property name="text">
     <string>Настройки</string>
@@ -54,16 +54,16 @@ font: 18pt &quot;MS Shell Dlg 2&quot;;</string>
   <widget class="QPushButton" name="lvl">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>280</x>
      <y>360</y>
      <width>501</width>
      <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(116, 48, 31);
+    <string notr="true">color: rgb(118, 0, 0);
 background-color: rgb(156, 138, 138);
-font: 24pt &quot;MS Shell Dlg 2&quot;;
+font: 24pt &quot;MS UI Gothic&quot;;
   
 </string>
    </property>
